--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -1,6 +1,7 @@
 @import "bootstrap"
 @import "font-awesome-sprockets"
 @import "font-awesome"
+@import "admin/variable"
 
 body
   padding-top: 3.5rem
@@ -67,3 +68,408 @@ body
     border-top-right-radius: 0 !important
   .input-group-addon:first-child
     border-right: 0
+
+a
+  color: $brand_text
+
+h1
+  color: #666
+  font-size: 24px
+  margin: 10px 0
+  margin-bottom: 30px
+  padding-bottom: 9px
+  border-bottom: 1px solid #eee
+
+/* Sidebar navigation */
+.sidebar
+  position: fixed
+  top: 37px
+  bottom: 0
+  left: 0
+  z-index: 1000
+  padding: 20px
+  overflow-x: hidden
+  overflow-y: auto
+  border-right: 1px solid #eee
+  padding-left: 0
+  padding-right: 0
+  background-color: #28c3cd
+  .nav
+    margin-bottom: 20px
+  .nav-item
+    width: 100%
+    // &:first-child
+    //   border-top: 1px solid darken($brand, 5%)
+    .nav-link
+      color: white
+      border-radius: 0
+      padding: 0.8rem
+      border-bottom: 1px solid darken($brand, 5%)
+      font-size: 0.95em
+      transition: .1s
+      &:hover
+        @include bg_darken
+      &.current
+        @include bg_darken
+
+.modal-header
+  .close
+    display: none
+
+.field_with_errors
+  textarea
+    @extend .alert-danger
+
+#error_explanation
+  color: #721c24
+
+.content
+  // FORM STYLE
+  .content-form-row
+    position: relative
+  .content-form-header
+    background-color: #FFF
+  .content-form-control-feedback
+    display: none
+    &.is-invalid
+      display: none
+  .content-form-invalid-feedback
+    position: relative
+    margin-bottom: 10px
+    color: rgba(255, 255, 255, 0.9)
+    background-color: rgba(#f53731, 0.9)
+    border-radius: 6px
+    padding: 4px 8px
+    margin-top: -3px
+    &:after
+      border: 10px solid transparent
+      border-top-color: rgba(#f53731, 0.9)
+      border-bottom-width: 0
+      bottom: -10px
+      content: ""
+      display: block
+      left: 30px
+      position: absolute
+      width: 0
+  // &.m_error-formVaridate
+    margin-top: -45px
+
+  .content-form-inline
+    position: absolute
+    bottom: 0
+    right: 8px
+    z-index: 100
+    height: 38px
+    line-height: 38px
+    text-align: right
+
+.has-error
+  input, input:focus, textarea, textarea:focus
+    border-width: 2px
+    border-color: #f53731
+    border-radius: .35rem
+
+.l_content_inner
+  max-width: 800px
+  margin-left: 2rem
+  label
+    color: gray
+    font-size: 14px
+
+.datepicker
+  .content-form-invalid-feedback.m_error-formVaridate
+    display: block
+    margin-top: 35px
+
+/* UI Component
+   ========================================================================== */
+
+form
+  &.advice_search, &.qa_search, &.today_search, &.video_search ,&.clinic_search
+    margin-bottom: 40px
+    border: 1px solid #ddd
+    padding: 20px 20px 0 20px
+    background-color: #fdfdfd
+    display: flex
+    justify-content: center
+  &.today_search
+    padding: 10px 0 2px
+    margin: -9px 0 20px
+    >h2
+      color: $black
+      font-size: 24px
+
+.form-inline .form-group
+  margin-bottom: 20px
+  .input-group
+    @media (min-width: $bp_sm)
+      width: 100%
+.form-inline
+  &.start
+    align-items: flex-start
+  .l_time_group
+    display: flex
+  // if has-error
+  &.l_date_varidate
+    height: 60px
+    display: flex
+    align-items: flex-start
+    margin-top: 20px
+    position: relative
+    .l_time_group
+      display: flex
+      position: absolute
+      left: 208px
+      top: 18px
+
+.form-group
+  margin-bottom: 1.2rem
+.l_content_inner
+  .form-group
+    margin-bottom: 1.4rem
+
+.l_form_column
+  display: flex
+  flex-direction: column!important
+  margin-right: 15px
+  label
+    margin-bottom: 2px
+  select
+    min-width: 75px
+.input-group > .form-control:not(:last-child), .input-group > .custom-select:not(:last-child)
+  border-radius: 0.25rem
+
+label
+  &.bold
+    font-weight: $bold
+  &.start
+    align-self: flex-start
+
+.l_grid_calender
+  display: -ms-grid
+  display: grid!important
+  -ms-grid-columns: 200px 30px 200px 20px
+  grid-template-columns: 200px 30px 200px 20px
+  -ms-grid-rows: 24px 40px
+  grid-template-rows: 24px 40px
+  &.m_single
+    -ms-grid-columns: 200px 0 0 20px
+    grid-template-columns: 200px 0 0 20px
+  &.m_single-no-margin
+    -ms-grid-columns: 200px 0 0 0
+    grid-template-columns: 200px 0 0 0
+  &.no_temp
+    -ms-grid-rows: 0
+    grid-template-rows: 0
+  // .fa.fa-calendar
+    height: 38px
+
+  >label.start
+    grid-column: 1/5
+    display: flex
+    justify-content: flex-start
+  input
+    position: relative
+  .fa.fa-calendar
+    position: absolute
+    display: block
+    right: 0
+    top: 0
+    height: 24px
+    box-sizing: initial
+    padding: 6px 18px
+    border-radius: 0 0.25rem 0.25rem 0
+    background-color: #f9f9f9
+    border: 1px solid $borderColor
+    font-size: 25px
+    @include brandColor_text
+    z-index: 10
+    cursor: pointer
+.tilde
+  margin: 5px
+  display: flex
+  justify-content: center
+  color: #bbb
+  font-weight: 400
+
+.m_fa_search
+  display: flex
+  align-items: flex-end
+  justify-content: center
+  margin-right: -15px
+  button
+    display: flex
+    align-items: center
+    justify-content: center
+    height: 64px
+    width: 64px
+    border: 1px solid $borderColor
+    background-color: white
+    .fa
+      color: $brand_text
+
+.form-control
+  color: #444
+
+// DatePicer
+.bootstrap-datetimepicker-widget
+  padding: 10px 20px
+  background-color: #fcfcfc
+  box-shadow: 2px 2px 2px #eee
+  max-height: 340px
+  overflow-y: scroll
+  .datepicker
+    .fa
+      color: $brand_text
+      &.fa-arrow-right, &.fa-arrow-left
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 40px
+        height: 36px
+        color: white
+        font-size: 26px
+        background-color: $brand_text
+
+    table
+      tr,th
+        min-width: 15px
+        padding: 5px 10px
+        text-align: center
+      th
+        font-size: 24px
+        font-weight: 300
+        &.picker-switch
+          font-size: 25px
+          color: $brand_text
+          font-weight: $bold
+          width: 60px
+          margin: 0 5px
+          transition: .1s
+          &:hover
+            background-color: #eee
+            cursor: pointer
+        &.prev, &.next
+          padding: 0
+          .fa
+            margin: 0
+            font-size: 2rem
+            padding: 20px
+            width: 50px
+            height: 50px
+
+      td, .fa
+        cursor: pointer
+        opacity: 1
+        transition: .1s
+      td
+        &:hover
+          background-color: #ddd
+          opacity: .9
+      .fa
+        &:hover
+          opacity: .7
+      td
+        margin: 2px
+        font-size: 20px
+        span.month, span.year, span.decade
+          padding: 10px
+          background-color: #eee
+          margin: 3px
+          display: flex
+          justify-content: center
+          transition: .1s
+          &.disabled
+            opacity: .2
+          &:hover
+            background-color: rgba(40, 195, 205, .8)
+            color: white
+
+      td
+        &.day
+          &.old, &.new
+            color: #bbb
+            font-size: 18px
+          &.today
+            color: $brand_text
+          &.active
+            @include bg_brand
+            color: white
+
+      .fa-arrow-left, .fa-arrow-right
+        color: $brand_text
+
+// Pagination
+.pagination
+  margin: 1.2rem 0
+  display: flex
+  justify-content: center
+  @media (max-width: $bp_md - 1)
+    flex-wrap: wrap
+
+  .page-item.active
+    .page-link
+      background-color: $brand
+      border-color: $brand_text
+  .page-item
+    white-space: nowrap
+    margin: 0 0 5px 0
+    &:not(.active) .page-link
+      color: $brand_text
+
+.org_pagenate
+  &-top
+    > nav
+      margin-top: -1.5rem
+    &.has_searchArea
+      margin-top: -2.5rem
+
+.m_dummy-column
+  @media (max-width: $bp_md - 1)
+    display: none
+
+// Table
+table.table
+  margin-bottom: 2rem
+  thead
+    background-color: #f9f9f9
+    th
+      font-weight: 600
+      border-bottom: 1px solid $bs_border
+  tr
+    td
+      padding: .5rem
+      vertical-align: middle
+      a.btn:not(:last-child)
+        margin-right: 8px
+      a.btn
+        @media (max-width: 1180px)
+          margin-bottom: 8px
+
+    &:first-child td
+      border: none
+    &:last-child td
+      border-bottom: 1px solid $bs_border
+
+.org_admin_table
+  table.table
+    margin-bottom: 0
+    thead
+      th
+        padding: 12px 12px 11px
+        white-space: nowrap
+    tr
+      height: 100%
+      transition: .2s
+      // &:hover
+        background: rgba(41, 195, 205, 0.15)
+      td
+        padding: .5rem 1rem
+
+.search_form
+  margin-bottom: 40px
+  border: 1px solid #ddd
+  padding: 20px 20px 0 20px
+  background-color: #fdfdfd
+  display: flex
+  justify-content: cente
