--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -23,6 +23,8 @@ html
               = link_to 'ブランド管理', '#', { class: 'nav-link' }
               = link_to '店舗管理', '#', { class: 'nav-link' }
               = link_to 'ユーザ管理', '#', { class: 'nav-link' }
+              = link_to 'ログアウト', admin_logout_path, { class: 'nav-link' }
         main.col-sm-10.ml-sm-auto.col-md-10.pt-2.pb-3 role="main"
           .content
+            == render 'shared/flash'
             = yield
