店舗を並び替えれるように修正

--- a/app/views/admin/shops/_form.html.slim
+++ b/app/views/admin/shops/_form.html.slim
@@ -3,17 +3,18 @@
 
   == render 'shared/errors', record: shop
 
-  = form_with model: [:admin, shop], local: true do |f|
+  = form_with model: [:admin, @brand, shop], local: true do |f|
     .form-group
+      = f.hidden_field :brand_id, value: @brand.id
       = f.label :name, '名前', class: 'require'
       = f.text_field :name, class: 'form-control'
 
     .org_info_btns
       .mol_info_btns.actions
         - if shop.persisted?
-          .atm_info_btn = link_to '一覧へ戻る', admin_shops_path, class: 'btn btn-outline-secondary'
+          .atm_info_btn = link_to '一覧へ戻る', admin_brand_shops_path(@brand), class: 'btn btn-outline-secondary'
           .atm_info_btn = link_to '詳細', shop, class: 'btn btn-outline-info'
           .atm_info_btn = f.button '更新', class: 'btn btn-success'
         - else
-          .atm_info_btn = link_to '一覧へ戻る', admin_shops_path, class: 'btn btn-outline-secondary'
+          .atm_info_btn = link_to '一覧へ戻る', admin_brand_shops_path(@brand), class: 'btn btn-outline-secondary'
           .atm_info_btn = f.button '登録', class: 'btn btn-success'
