--- a/app/views/admin/brands/index.html.slim
+++ b/app/views/admin/brands/index.html.slim
@@ -14,7 +14,7 @@ table.table.table-hover
     tr
       th ID
       th ブランド名
-      th
+      th 操作
 
   tbody
     - @brands.each do |brand|
@@ -23,3 +23,4 @@ table.table.table-hover
         td width="75%" = brand.name
         td width="20%"
           = link_to '編集', edit_admin_brand_path(brand), { class: 'btn btn-outline-success btn-sm' }
+          = link_to '店舗管理', admin_brand_shops_path(brand), { class: 'btn btn-outline-success btn-sm' }
