ユーザ側のブランド一覧と店舗一覧を実装

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,3 +11,22 @@
  * It is generally better to create a new file per style scope.
  */
 @import "bootstrap"
+
+header
+  .navbar
+    a
+      color: #FFF
+
+.jumbotron
+  background-color: #FFF
+
+.card
+  padding: 0.8em
+  text-align: left
+  color: #00B2BF
+
+.link
+  display: flex
+  padding-left: 0
+  list-style: none
+  border-radius: 0.25rem
