バグを修正

--- a/app/views/admin/shops/index.html.slim
+++ b/app/views/admin/shops/index.html.slim
@@ -8,7 +8,7 @@ h1 = "#{@brand.name}の店舗一覧"
       - else
         .m_dummy-column
     .col-md-4.align-self-end
-      .org_pagenate-top = paginate @shops, theme: 'twitter-bootstrap-4'
+      .m_dummy-column
     .col-md-4
       .m_dummy-column
 
